Move minimap to opposite side of screen to avoid overlapping assistant (close #6487)

--- a/css/80_app.css
+++ b/css/80_app.css
@@ -4421,10 +4421,10 @@ img.tile-debug {
     box-shadow: 0 0 2em black;
 }
 [dir='ltr'] .map-in-map {
-    left: 10px;
+    right: 50px;
 }
 [dir='rtl'] .map-in-map {
-    right: 10px;
+    left: 50px;
 }
 
 .map-in-map-tiles {
